entity_macros/tests/ui/derive/ent/missing-ent-attr-in-strict-mode.stderr
error: Missing ent(...) attribute
 --> $DIR/missing-ent-attr-in-strict-mode.rs:6:5
  |
6 |     id: Id,
  |     ^^

error: No id field provided
  --> $DIR/missing-ent-attr-in-strict-mode.rs:4:1
   |
4  | / #[ent(strict)]
5  | | struct TestEnt {
6  | |     id: Id,
7  | |
...  |
15 | |     last_updated: u64,
16 | | }
   | |_^
